# cmake_notes

./: .gitignore  .gitmodules  build_poppler.bat  readme.md  readme.txt
projects/awesome_gil_app/: CMakeLists.txt  readme.md
projects/awesome_gil_app/src/: main.cpp
projects/awesome_gil_app/tools/: build.bat
projects/boost_gil/: CMakeLists.txt  readme.md
projects/boost_gil/tools/: build.bat
projects/boost_simple/: CMakeLists.txt  readme.md
projects/boost_simple/src/: main.cpp
projects/boost_simple/tools/: build.bat
projects/gtest_simple/: CMakeLists.txt
projects/gtest_simple/tools/: build.bat
projects/hello_world/: CMakeLists.txt  readme.md
projects/hello_world/tools/: build.bat
projects/pybind_find_package/: CMakeLists.txt  readme.md
projects/pybind_find_package/tools/: build.bat
projects/pybind_simple/: CMakeLists.txt
projects/pybind_subdirectory/: CMakeLists.txt
projects/pybind_subdirectory/tools/: build.bat
projects/static_lib_simple/: CMakeLists.txt  readme.md
projects/static_lib_simple/src/foobla/: addition.cpp
projects/static_lib_simple/tools/: build.bat
projects/static_lib_with_test/: CMakeLists.txt  readme.md
projects/static_lib_with_test/src/foobla/: addition.cpp
projects/static_lib_with_test/src/test/: main.cpp
projects/static_lib_with_test/tools/: build.bat
projects/vcpkg_boost_test/: CMakeLists.txt
projects/vcpkg_boost_test/tools/: build.bat
tools/boost/: build.bat
